<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrolleyProblem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pb_level"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progress="50"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>

            <ImageView
                android:id="@+id/iv_problem"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/Image_content"
                android:foreground="@drawable/bg_image"
                app:layout_constraintDimensionRatio="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pb_level" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="No"
                app:layout_constraintTop_toBottomOf="@id/iv_problem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/sample_title" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"
                android:textSize="14sp"
                android:text="@string/sample_description" />

            <ProgressBar
                android:id="@+id/pb_time"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progress="0"
                app:layout_constraintTop_toBottomOf="@id/tv_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="nextProblem"
        android:tag="Yes"
        android:text="@string/sample_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextProblem"
        android:tag="No"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_action"
        app:layout_constraintTop_toTopOf="@id/b_action" />

</android.support.constraint.ConstraintLayout>